--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -699,14 +699,6 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
-.mr-20 {
-  margin-right: 5rem;
-}
-
 .block {
   display: block;
 }
@@ -845,6 +837,10 @@ video {
 
 .w-\[75\%\] {
   width: 75%;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .max-w-full {
@@ -1125,6 +1121,10 @@ video {
   border-radius: 0.125rem;
 }
 
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -1230,9 +1230,9 @@ video {
   background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 
-.bg-yellow-300 {
+.bg-green-600 {
   --tw-bg-opacity: 1;
-  background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
+  background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
 }
 
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
@@ -1254,24 +1254,14 @@ video {
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
 
-.bg-green-800 {
+.bg-gray-900 {
   --tw-bg-opacity: 1;
-  background-color: rgba(6, 95, 70, var(--tw-bg-opacity));
+  background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
 }
 
-.bg-green-700 {
+.bg-\[\#F3F4F6\] {
   --tw-bg-opacity: 1;
-  background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
-}
-
-.bg-green-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+  background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1414,12 +1404,12 @@ video {
   padding-top: 1rem;
 }
 
-.pr-2 {
-  padding-right: 0.5rem;
+.pr-4 {
+  padding-right: 1rem;
 }
 
-.pl-4 {
-  padding-left: 1rem;
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pt-12 {
@@ -1428,10 +1418,6 @@ video {
 
 .pb-8 {
   padding-bottom: 2rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
 }
 
 .pt-8 {
@@ -1474,28 +1460,12 @@ video {
   padding-top: 5rem;
 }
 
-.pr-4 {
-  padding-right: 1rem;
-}
-
 .pl-5 {
   padding-left: 1.25rem;
 }
 
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pr-3 {
-  padding-right: 0.75rem;
-}
-
-.pr-10 {
-  padding-right: 2.5rem;
-}
-
-.pr-0 {
-  padding-right: 0px;
 }
 
 .text-left {
@@ -1560,12 +1530,12 @@ video {
   font-weight: 800;
 }
 
-.font-light {
-  font-weight: 300;
-}
-
 .font-medium {
   font-weight: 500;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .font-bold {
@@ -1616,6 +1586,11 @@ video {
   color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
 
+.text-gray-50 {
+  --tw-text-opacity: 1;
+  color: rgba(249, 250, 251, var(--tw-text-opacity));
+}
+
 .text-\[\#EB5758\] {
   --tw-text-opacity: 1;
   color: rgba(235, 87, 88, var(--tw-text-opacity));
@@ -1641,21 +1616,6 @@ video {
   color: rgba(251, 191, 36, var(--tw-text-opacity));
 }
 
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgba(59, 130, 246, var(--tw-text-opacity));
-}
-
-.text-gray-100 {
-  --tw-text-opacity: 1;
-  color: rgba(243, 244, 246, var(--tw-text-opacity));
-}
-
-.text-gray-50 {
-  --tw-text-opacity: 1;
-  color: rgba(249, 250, 251, var(--tw-text-opacity));
-}
-
 .underline {
   text-decoration: underline;
 }
@@ -1674,6 +1634,21 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .drop-shadow-sm {
   --tw-drop-shadow: drop-shadow(0 1px 1px rgba(0,0,0,0.05));
   filter: var(--tw-filter);
@@ -1681,6 +1656,11 @@ video {
 
 .drop-shadow-md {
   --tw-drop-shadow: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
+  filter: var(--tw-filter);
+}
+
+.drop-shadow-lg {
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.04)) drop-shadow(0 4px 3px rgba(0, 0, 0, 0.1));
   filter: var(--tw-filter);
 }
 
@@ -1827,6 +1807,10 @@ video {
   color: rgba(245, 158, 11, var(--tw-text-opacity));
 }
 
+.dark .dark\:block {
+  display: block;
+}
+
 .dark .dark\:inline {
   display: inline;
 }
@@ -1850,9 +1834,9 @@ video {
   border-color: rgba(65, 14, 5, var(--tw-border-opacity));
 }
 
-.dark .dark\:border-\[\#444444\] {
+.dark .dark\:border-\[\#303030\] {
   --tw-border-opacity: 1;
-  border-color: rgba(68, 68, 68, var(--tw-border-opacity));
+  border-color: rgba(48, 48, 48, var(--tw-border-opacity));
 }
 
 .dark .dark\:border-transparent {
@@ -1874,29 +1858,19 @@ video {
   border-color: rgba(85, 85, 85, var(--tw-border-opacity));
 }
 
-.dark .dark\:border-\[\#974040\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(151, 64, 64, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-\[\#383838\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(56, 56, 56, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-\[\#303030\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(48, 48, 48, var(--tw-border-opacity));
-}
-
-.dark .dark\:bg-\[\#1E1E1E\] {
+.dark .dark\:bg-\[\#171717\] {
   --tw-bg-opacity: 1;
-  background-color: rgba(30, 30, 30, var(--tw-bg-opacity));
+  background-color: rgba(23, 23, 23, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-\[\#141414\] {
   --tw-bg-opacity: 1;
   background-color: rgba(20, 20, 20, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#1E1E1E\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(30, 30, 30, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-\[\#791c0c\] {
@@ -1938,64 +1912,9 @@ video {
   background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-\[\#1f1f1f\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(31, 31, 31, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#161616\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(22, 22, 22, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#151515\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(21, 21, 21, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#111111\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(17, 17, 17, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#191919\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(25, 25, 25, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#181818\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(24, 24, 24, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#171717\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(23, 23, 23, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#a38e8e\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(163, 142, 142, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#252525\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(37, 37, 37, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#131313\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(19, 19, 19, var(--tw-bg-opacity));
-}
-
 .dark .dark\:bg-\[\#222222\] {
   --tw-bg-opacity: 1;
   background-color: rgba(34, 34, 34, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#1c1c1c\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(28, 28, 28, var(--tw-bg-opacity));
 }
 
 .dark .dark\:text-gray-300 {
@@ -2098,68 +2017,12 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:right-\[-1\.8rem\] {
-    right: -1.8rem;
-  }
-
-  .md\:bottom-\[0\.3rem\] {
-    bottom: 0.3rem;
-  }
-
-  .md\:right-\[-10rem\] {
-    right: -10rem;
-  }
-
-  .md\:right-\[-1\.5rem\] {
-    right: -1.5rem;
-  }
-
-  .md\:right-\[-1\.6rem\] {
-    right: -1.6rem;
-  }
-
-  .md\:right-\[-1\.2rem\] {
-    right: -1.2rem;
-  }
-
-  .md\:bottom-\[10rem\] {
-    bottom: 10rem;
-  }
-
-  .md\:bottom-\[0\.5rem\] {
-    bottom: 0.5rem;
-  }
-
-  .md\:right-\[-1\.3rem\] {
-    right: -1.3rem;
-  }
-
   .md\:right-\[-1\.4rem\] {
     right: -1.4rem;
   }
 
-  .md\:right-\[-1\.45rem\] {
-    right: -1.45rem;
-  }
-
-  .md\:bottom-\[0\.7rem\] {
-    bottom: 0.7rem;
-  }
-
-  .md\:bottom-\[0\.2rem\] {
-    bottom: 0.2rem;
-  }
-
-  .md\:bottom-\[0\.4rem\] {
-    bottom: 0.4rem;
-  }
-
   .md\:bottom-\[0\.45rem\] {
     bottom: 0.45rem;
-  }
-
-  .md\:right-\[-1\.35rem\] {
-    right: -1.35rem;
   }
 
   .md\:block {
@@ -2168,6 +2031,30 @@ video {
 
   .md\:max-w-sm {
     max-width: 24rem;
+  }
+
+  .md\:max-w-lg {
+    max-width: 32rem;
+  }
+
+  .md\:max-w-md {
+    max-width: 28rem;
+  }
+
+  .md\:max-w-\[25rem\] {
+    max-width: 25rem;
+  }
+
+  .md\:max-w-\[26rem\] {
+    max-width: 26rem;
+  }
+
+  .md\:max-w-\[25\.5rem\] {
+    max-width: 25.5rem;
+  }
+
+  .md\:max-w-\[27rem\] {
+    max-width: 27rem;
   }
 
   .md\:flex-row {
@@ -2283,6 +2170,18 @@ video {
     --tw-space-x-reverse: 0;
     margin-right: calc(1rem * var(--tw-space-x-reverse));
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .lg\:space-x-10 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .lg\:space-x-36 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(9rem * var(--tw-space-x-reverse));
+    margin-left: calc(9rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .lg\:py-1 {
