--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -637,12 +637,36 @@ video {
   bottom: 0.2rem;
 }
 
+.top-10 {
+  top: 2.5rem;
+}
+
+.-left-4 {
+  left: -1rem;
+}
+
+.right-20 {
+  right: 5rem;
+}
+
+.-bottom-10 {
+  bottom: -2.5rem;
+}
+
+.left-4 {
+  left: 1rem;
+}
+
 .top-5 {
   top: 1.25rem;
 }
 
 .left-\[7\.5rem\] {
   left: 7.5rem;
+}
+
+.-bottom-7 {
+  bottom: -1.75rem;
 }
 
 .z-20 {
@@ -747,6 +771,10 @@ video {
   height: 0.5rem;
 }
 
+.h-56 {
+  height: 14rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -811,6 +839,10 @@ video {
   width: 27.5rem;
 }
 
+.w-56 {
+  width: 14rem;
+}
+
 .w-6 {
   width: 1.5rem;
 }
@@ -837,10 +869,6 @@ video {
 
 .w-\[75\%\] {
   width: 75%;
-}
-
-.w-10 {
-  width: 2.5rem;
 }
 
 .max-w-full {
@@ -884,6 +912,47 @@ video {
 
 .transform {
   transform: var(--tw-transform);
+}
+
+@-webkit-keyframes blob {
+  0% {
+    transform: translate(0px, 0px) scale(1);
+  }
+
+  33% {
+    transform: translate(30px, -50px) scale(1.1);
+  }
+
+  66% {
+    transform: translate(-20px, 20px) scale(0.9);
+  }
+
+  100% {
+    transform: translate(0px, 0px) scale(1);
+  }
+}
+
+@keyframes blob {
+  0% {
+    transform: translate(0px, 0px) scale(1);
+  }
+
+  33% {
+    transform: translate(30px, -50px) scale(1.1);
+  }
+
+  66% {
+    transform: translate(-20px, 20px) scale(0.9);
+  }
+
+  100% {
+    transform: translate(0px, 0px) scale(1);
+  }
+}
+
+.animate-blob {
+  -webkit-animation: blob 6s infinite;
+          animation: blob 6s infinite;
 }
 
 @-webkit-keyframes bounce {
@@ -1109,20 +1178,16 @@ video {
   border-radius: 9999px;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
 .rounded-xl {
   border-radius: 0.75rem;
 }
 
-.rounded-sm {
-  border-radius: 0.125rem;
+.rounded {
+  border-radius: 0.25rem;
 }
 
-.rounded-3xl {
-  border-radius: 1.5rem;
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 
 .border {
@@ -1230,9 +1295,24 @@ video {
   background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 
-.bg-green-600 {
+.bg-gray-400 {
   --tw-bg-opacity: 1;
-  background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
+  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
+
+.bg-purple-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(196, 181, 253, var(--tw-bg-opacity));
+}
+
+.bg-yellow-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
+}
+
+.bg-pink-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(249, 168, 212, var(--tw-bg-opacity));
 }
 
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
@@ -1252,16 +1332,6 @@ video {
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-}
-
-.bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
-}
-
-.bg-\[\#F3F4F6\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1624,6 +1694,14 @@ video {
   opacity: 0;
 }
 
+.opacity-30 {
+  opacity: 0.3;
+}
+
+.mix-blend-multiply {
+  mix-blend-mode: multiply;
+}
+
 .shadow-inner {
   --tw-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -1634,23 +1712,18 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-2xl {
-  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-xl {
-  --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.blur-xl {
+  --tw-blur: blur(24px);
+  filter: var(--tw-filter);
 }
 
 .drop-shadow-sm {
   --tw-drop-shadow: drop-shadow(0 1px 1px rgba(0,0,0,0.05));
+  filter: var(--tw-filter);
+}
+
+.drop-shadow {
+  --tw-drop-shadow: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1)) drop-shadow(0 1px 1px rgba(0, 0, 0, 0.06));
   filter: var(--tw-filter);
 }
 
@@ -1661,6 +1734,11 @@ video {
 
 .drop-shadow-lg {
   --tw-drop-shadow: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.04)) drop-shadow(0 4px 3px rgba(0, 0, 0, 0.1));
+  filter: var(--tw-filter);
+}
+
+.drop-shadow-xl {
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgba(0, 0, 0, 0.03)) drop-shadow(0 8px 5px rgba(0, 0, 0, 0.08));
   filter: var(--tw-filter);
 }
 
@@ -1710,6 +1788,16 @@ video {
 
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+.animation-delay-2000 {
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+}
+
+.animation-delay-4000 {
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
 }
 
 .hover\:scale-125:hover {
@@ -1883,9 +1971,9 @@ video {
   background-color: rgba(39, 39, 39, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-green-800 {
+.dark .dark\:bg-gray-800 {
   --tw-bg-opacity: 1;
-  background-color: rgba(6, 95, 70, var(--tw-bg-opacity));
+  background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
@@ -1907,14 +1995,19 @@ video {
   background-color: rgba(43, 43, 43, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
-}
-
 .dark .dark\:bg-\[\#222222\] {
   --tw-bg-opacity: 1;
   background-color: rgba(34, 34, 34, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#2c2c2c\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(44, 44, 44, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#353535\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(53, 53, 53, var(--tw-bg-opacity));
 }
 
 .dark .dark\:text-gray-300 {
@@ -1955,6 +2048,10 @@ video {
 .dark .dark\:text-\[\#ADAEAD\] {
   --tw-text-opacity: 1;
   color: rgba(173, 174, 173, var(--tw-text-opacity));
+}
+
+.dark .dark\:opacity-5 {
+  opacity: 0.05;
 }
 
 .dark .dark\:shadow {
@@ -2025,32 +2122,28 @@ video {
     bottom: 0.45rem;
   }
 
+  .md\:top-20 {
+    top: 5rem;
+  }
+
+  .md\:-right-2 {
+    right: -0.5rem;
+  }
+
   .md\:block {
     display: block;
   }
 
+  .md\:h-\[20rem\] {
+    height: 20rem;
+  }
+
+  .md\:w-\[20rem\] {
+    width: 20rem;
+  }
+
   .md\:max-w-sm {
     max-width: 24rem;
-  }
-
-  .md\:max-w-lg {
-    max-width: 32rem;
-  }
-
-  .md\:max-w-md {
-    max-width: 28rem;
-  }
-
-  .md\:max-w-\[25rem\] {
-    max-width: 25rem;
-  }
-
-  .md\:max-w-\[26rem\] {
-    max-width: 26rem;
-  }
-
-  .md\:max-w-\[25\.5rem\] {
-    max-width: 25.5rem;
   }
 
   .md\:max-w-\[27rem\] {
@@ -2160,28 +2253,16 @@ video {
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
-  .lg\:space-x-40 > :not([hidden]) ~ :not([hidden]) {
+  .lg\:space-x-36 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
-    margin-right: calc(10rem * var(--tw-space-x-reverse));
-    margin-left: calc(10rem * calc(1 - var(--tw-space-x-reverse)));
+    margin-right: calc(9rem * var(--tw-space-x-reverse));
+    margin-left: calc(9rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .lg\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(1rem * var(--tw-space-x-reverse));
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .lg\:space-x-10 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .lg\:space-x-36 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(9rem * var(--tw-space-x-reverse));
-    margin-left: calc(9rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .lg\:py-1 {
@@ -2271,4 +2352,3 @@ video {
     line-height: 1.75rem;
   }
 }
-
