--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -649,8 +649,8 @@ video {
   right: 5rem;
 }
 
-.-bottom-10 {
-  bottom: -2.5rem;
+.-bottom-7 {
+  bottom: -1.75rem;
 }
 
 .left-4 {
@@ -665,10 +665,6 @@ video {
   left: 7.5rem;
 }
 
-.-bottom-7 {
-  bottom: -1.75rem;
-}
-
 .z-20 {
   z-index: 20;
 }
@@ -679,6 +675,10 @@ video {
 
 .z-40 {
   z-index: 40;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .mx-auto {
@@ -1474,8 +1474,8 @@ video {
   padding-top: 1rem;
 }
 
-.pr-4 {
-  padding-right: 1rem;
+.pr-2 {
+  padding-right: 0.5rem;
 }
 
 .pb-4 {
@@ -1528,6 +1528,10 @@ video {
 
 .pt-20 {
   padding-top: 5rem;
+}
+
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .pl-5 {
@@ -1698,6 +1702,10 @@ video {
   opacity: 0.3;
 }
 
+.opacity-25 {
+  opacity: 0.25;
+}
+
 .mix-blend-multiply {
   mix-blend-mode: multiply;
 }
@@ -1729,16 +1737,6 @@ video {
 
 .drop-shadow-md {
   --tw-drop-shadow: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
-  filter: var(--tw-filter);
-}
-
-.drop-shadow-lg {
-  --tw-drop-shadow: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.04)) drop-shadow(0 4px 3px rgba(0, 0, 0, 0.1));
-  filter: var(--tw-filter);
-}
-
-.drop-shadow-xl {
-  --tw-drop-shadow: drop-shadow(0 20px 13px rgba(0, 0, 0, 0.03)) drop-shadow(0 8px 5px rgba(0, 0, 0, 0.08));
   filter: var(--tw-filter);
 }
 
@@ -1780,6 +1778,14 @@ video {
 
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
+.duration-700 {
+  transition-duration: 700ms;
 }
 
 .ease-in-out {
@@ -1849,6 +1855,26 @@ video {
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-xl:hover {
+  --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:drop-shadow-md:hover {
+  --tw-drop-shadow: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
+  filter: var(--tw-filter);
+}
+
+.hover\:drop-shadow-xl:hover {
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgba(0, 0, 0, 0.03)) drop-shadow(0 8px 5px rgba(0, 0, 0, 0.08));
+  filter: var(--tw-filter);
+}
+
+.hover\:drop-shadow-2xl:hover {
+  --tw-drop-shadow: drop-shadow(0 25px 25px rgba(0, 0, 0, 0.15));
+  filter: var(--tw-filter);
 }
 
 .active\:border-yellow-700:active {
@@ -1971,9 +1997,9 @@ video {
   background-color: rgba(39, 39, 39, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-gray-800 {
+.dark .dark\:bg-\[\#353535\] {
   --tw-bg-opacity: 1;
-  background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+  background-color: rgba(53, 53, 53, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
@@ -1995,19 +2021,14 @@ video {
   background-color: rgba(43, 43, 43, var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
+
 .dark .dark\:bg-\[\#222222\] {
   --tw-bg-opacity: 1;
   background-color: rgba(34, 34, 34, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#2c2c2c\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(44, 44, 44, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#353535\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(53, 53, 53, var(--tw-bg-opacity));
 }
 
 .dark .dark\:text-gray-300 {
