added profispiler logo in all pages

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -775,6 +775,14 @@ video {
   height: 5rem;
 }
 
+.h-14 {
+  height: 3.5rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
 .max-h-\[17rem\] {
   max-height: 17rem;
 }
@@ -1454,6 +1462,10 @@ video {
   padding-top: 0.5rem;
 }
 
+.pr-20 {
+  padding-right: 5rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2024,6 +2036,10 @@ video {
     justify-content: center;
   }
 
+  .md\:justify-between {
+    justify-content: space-between;
+  }
+
   .md\:pl-1 {
     padding-left: 0.25rem;
   }
@@ -2050,6 +2066,22 @@ video {
 
   .md\:pl-0 {
     padding-left: 0px;
+  }
+
+  .md\:pl-6 {
+    padding-left: 1.5rem;
+  }
+
+  .md\:pl-10 {
+    padding-left: 2.5rem;
+  }
+
+  .md\:pl-14 {
+    padding-left: 3.5rem;
+  }
+
+  .md\:pl-16 {
+    padding-left: 4rem;
   }
 
   .md\:text-left {
