--- a/public/faq/css/styles.css
+++ b/public/faq/css/styles.css
@@ -645,16 +645,16 @@ video {
   left: 7.5rem;
 }
 
-.z-20 {
-  z-index: 20;
+.z-40 {
+  z-index: 40;
 }
 
 .z-10 {
   z-index: 10;
 }
 
-.z-40 {
-  z-index: 40;
+.z-20 {
+  z-index: 20;
 }
 
 .mx-auto {
@@ -697,14 +697,6 @@ video {
 
 .mb-10 {
   margin-bottom: 2.5rem;
-}
-
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
-.mr-20 {
-  margin-right: 5rem;
 }
 
 .block {
@@ -757,6 +749,10 @@ video {
 
 .h-6 {
   height: 1.5rem;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .h-px {
@@ -1113,12 +1109,12 @@ video {
   border-radius: 9999px;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-sm {
@@ -1230,9 +1226,9 @@ video {
   background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 
-.bg-yellow-300 {
+.bg-gray-400 {
   --tw-bg-opacity: 1;
-  background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
+  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
 
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
@@ -1252,26 +1248,6 @@ video {
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-}
-
-.bg-green-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(6, 95, 70, var(--tw-bg-opacity));
-}
-
-.bg-green-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
-}
-
-.bg-green-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1418,8 +1394,8 @@ video {
   padding-right: 0.5rem;
 }
 
-.pl-4 {
-  padding-left: 1rem;
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pt-12 {
@@ -1428,10 +1404,6 @@ video {
 
 .pb-8 {
   padding-bottom: 2rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
 }
 
 .pt-8 {
@@ -1484,18 +1456,6 @@ video {
 
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pr-3 {
-  padding-right: 0.75rem;
-}
-
-.pr-10 {
-  padding-right: 2.5rem;
-}
-
-.pr-0 {
-  padding-right: 0px;
 }
 
 .text-left {
@@ -1560,12 +1520,12 @@ video {
   font-weight: 800;
 }
 
-.font-light {
-  font-weight: 300;
-}
-
 .font-medium {
   font-weight: 500;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .font-bold {
@@ -1616,6 +1576,11 @@ video {
   color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
 
+.text-gray-50 {
+  --tw-text-opacity: 1;
+  color: rgba(249, 250, 251, var(--tw-text-opacity));
+}
+
 .text-\[\#EB5758\] {
   --tw-text-opacity: 1;
   color: rgba(235, 87, 88, var(--tw-text-opacity));
@@ -1639,21 +1604,6 @@ video {
 .text-yellow-400 {
   --tw-text-opacity: 1;
   color: rgba(251, 191, 36, var(--tw-text-opacity));
-}
-
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgba(59, 130, 246, var(--tw-text-opacity));
-}
-
-.text-gray-100 {
-  --tw-text-opacity: 1;
-  color: rgba(243, 244, 246, var(--tw-text-opacity));
-}
-
-.text-gray-50 {
-  --tw-text-opacity: 1;
-  color: rgba(249, 250, 251, var(--tw-text-opacity));
 }
 
 .underline {
@@ -1724,6 +1674,10 @@ video {
   transition-duration: 300ms;
 }
 
+.duration-700 {
+  transition-duration: 700ms;
+}
+
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1783,6 +1737,11 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.hover\:shadow-xl:hover {
+  --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .active\:border-yellow-700:active {
   --tw-border-opacity: 1;
   border-color: rgba(180, 83, 9, var(--tw-border-opacity));
@@ -1827,6 +1786,10 @@ video {
   color: rgba(245, 158, 11, var(--tw-text-opacity));
 }
 
+.dark .dark\:block {
+  display: block;
+}
+
 .dark .dark\:inline {
   display: inline;
 }
@@ -1850,9 +1813,9 @@ video {
   border-color: rgba(65, 14, 5, var(--tw-border-opacity));
 }
 
-.dark .dark\:border-\[\#444444\] {
+.dark .dark\:border-\[\#3d3d3d\] {
   --tw-border-opacity: 1;
-  border-color: rgba(68, 68, 68, var(--tw-border-opacity));
+  border-color: rgba(61, 61, 61, var(--tw-border-opacity));
 }
 
 .dark .dark\:border-transparent {
@@ -1874,29 +1837,19 @@ video {
   border-color: rgba(85, 85, 85, var(--tw-border-opacity));
 }
 
-.dark .dark\:border-\[\#974040\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(151, 64, 64, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-\[\#383838\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(56, 56, 56, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-\[\#303030\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(48, 48, 48, var(--tw-border-opacity));
-}
-
-.dark .dark\:bg-\[\#1E1E1E\] {
+.dark .dark\:bg-\[\#171717\] {
   --tw-bg-opacity: 1;
-  background-color: rgba(30, 30, 30, var(--tw-bg-opacity));
+  background-color: rgba(23, 23, 23, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-\[\#141414\] {
   --tw-bg-opacity: 1;
   background-color: rgba(20, 20, 20, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#1E1E1E\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(30, 30, 30, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-\[\#791c0c\] {
@@ -1909,9 +1862,9 @@ video {
   background-color: rgba(39, 39, 39, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-green-800 {
+.dark .dark\:bg-\[\#353535\] {
   --tw-bg-opacity: 1;
-  background-color: rgba(6, 95, 70, var(--tw-bg-opacity));
+  background-color: rgba(53, 53, 53, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
@@ -1938,64 +1891,9 @@ video {
   background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-\[\#1f1f1f\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(31, 31, 31, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#161616\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(22, 22, 22, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#151515\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(21, 21, 21, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#111111\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(17, 17, 17, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#191919\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(25, 25, 25, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#181818\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(24, 24, 24, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#171717\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(23, 23, 23, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#a38e8e\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(163, 142, 142, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#252525\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(37, 37, 37, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#131313\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(19, 19, 19, var(--tw-bg-opacity));
-}
-
 .dark .dark\:bg-\[\#222222\] {
   --tw-bg-opacity: 1;
   background-color: rgba(34, 34, 34, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#1c1c1c\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(28, 28, 28, var(--tw-bg-opacity));
 }
 
 .dark .dark\:text-gray-300 {
@@ -2018,9 +1916,9 @@ video {
   color: rgba(73, 73, 73, var(--tw-text-opacity));
 }
 
-.dark .dark\:text-\[\#444444\] {
+.dark .dark\:text-\[\#636363\] {
   --tw-text-opacity: 1;
-  color: rgba(68, 68, 68, var(--tw-text-opacity));
+  color: rgba(99, 99, 99, var(--tw-text-opacity));
 }
 
 .dark .dark\:text-gray-400 {
@@ -2098,68 +1996,12 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:right-\[-1\.8rem\] {
-    right: -1.8rem;
-  }
-
-  .md\:bottom-\[0\.3rem\] {
-    bottom: 0.3rem;
-  }
-
-  .md\:right-\[-10rem\] {
-    right: -10rem;
-  }
-
-  .md\:right-\[-1\.5rem\] {
-    right: -1.5rem;
-  }
-
-  .md\:right-\[-1\.6rem\] {
-    right: -1.6rem;
-  }
-
-  .md\:right-\[-1\.2rem\] {
-    right: -1.2rem;
-  }
-
-  .md\:bottom-\[10rem\] {
-    bottom: 10rem;
-  }
-
-  .md\:bottom-\[0\.5rem\] {
-    bottom: 0.5rem;
-  }
-
-  .md\:right-\[-1\.3rem\] {
-    right: -1.3rem;
-  }
-
   .md\:right-\[-1\.4rem\] {
     right: -1.4rem;
   }
 
-  .md\:right-\[-1\.45rem\] {
-    right: -1.45rem;
-  }
-
-  .md\:bottom-\[0\.7rem\] {
-    bottom: 0.7rem;
-  }
-
-  .md\:bottom-\[0\.2rem\] {
-    bottom: 0.2rem;
-  }
-
-  .md\:bottom-\[0\.4rem\] {
-    bottom: 0.4rem;
-  }
-
   .md\:bottom-\[0\.45rem\] {
     bottom: 0.45rem;
-  }
-
-  .md\:right-\[-1\.35rem\] {
-    right: -1.35rem;
   }
 
   .md\:block {
@@ -2168,6 +2010,10 @@ video {
 
   .md\:max-w-sm {
     max-width: 24rem;
+  }
+
+  .md\:max-w-\[27rem\] {
+    max-width: 27rem;
   }
 
   .md\:flex-row {
@@ -2273,10 +2119,10 @@ video {
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
-  .lg\:space-x-40 > :not([hidden]) ~ :not([hidden]) {
+  .lg\:space-x-36 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
-    margin-right: calc(10rem * var(--tw-space-x-reverse));
-    margin-left: calc(10rem * calc(1 - var(--tw-space-x-reverse)));
+    margin-right: calc(9rem * var(--tw-space-x-reverse));
+    margin-left: calc(9rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .lg\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
