added sharpness to app screenshots on homepage

--- a/public/changelog/css/styles.css
+++ b/public/changelog/css/styles.css
@@ -2179,6 +2179,10 @@ video {
     padding-left: 0px;
   }
 
+  .md\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
   .md\:text-left {
     text-align: left;
   }
