fixed download button wonkiness

--- a/public/credits/css/styles.css
+++ b/public/credits/css/styles.css
@@ -838,6 +838,10 @@ video {
   max-height: 17rem;
 }
 
+.max-h-\[20rem\] {
+  max-height: 20rem;
+}
+
 .min-h-\[4\.5rem\] {
   min-height: 4.5rem;
 }
@@ -920,6 +924,34 @@ video {
 
 .w-7 {
   width: 1.75rem;
+}
+
+.w-52 {
+  width: 13rem;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-\[30rem\] {
+  width: 30rem;
+}
+
+.w-\[30\%\] {
+  width: 30%;
+}
+
+.w-\[80\%\] {
+  width: 80%;
+}
+
+.w-\[28rem\] {
+  width: 28rem;
+}
+
+.w-\[27\.7rem\] {
+  width: 27.7rem;
 }
 
 .max-w-full {
@@ -1908,6 +1940,10 @@ video {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
+.ease-linear {
+  transition-timing-function: linear;
+}
+
 .hover\:scale-125:hover {
   --tw-scale-x: 1.25;
   --tw-scale-y: 1.25;
@@ -2334,8 +2370,20 @@ video {
     height: 15rem;
   }
 
+  .md\:h-10 {
+    height: 2.5rem;
+  }
+
   .md\:w-\[100\%\] {
     width: 100%;
+  }
+
+  .md\:w-52 {
+    width: 13rem;
+  }
+
+  .md\:w-56 {
+    width: 14rem;
   }
 
   .md\:max-w-sm {
@@ -2550,6 +2598,12 @@ video {
     --tw-space-x-reverse: 0;
     margin-right: calc(1rem * var(--tw-space-x-reverse));
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .lg\:space-x-3 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .lg\:py-1 {
